# NexusNodeFramework

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  test_client.cpp  test_graphics.cpp  vcpkg.json
.github/workflows/: c-cpp.yml
lib/Core/: CMakeLists.txt
lib/Core/src/Core/: Application.cpp  Application.h  Node.cpp  Node.h  NodePtr.cpp  NodePtr.h  Timer.cpp  Timer.h  pch.h
lib/GUI/: CMakeLists.txt
lib/GUI/src/GUI/: GUIBase.cpp  GUIBase.h  GUIWindow.cpp  GUIWindow.h
lib/Graphics/: CMakeLists.txt
lib/Graphics/src/Graphics/: MainWindow.cpp  MainWindow.h
lib/Network/: CMakeLists.txt
lib/Network/src/Network/: AbstractSocket.cpp  AbstractSocket.h  IOContext.cpp  IOContext.h  IOSocket.cpp  IOSocket.h  TcpServer.cpp  TcpServer.h  TcpSocket.cpp  TcpSocket.h
tests/core/: CMakeLists.txt  core_test.cpp
tests/network/: CMakeLists.txt  network_test.cpp
